--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 LastLevel=/Game/FirstPerson/Lvl_FirstPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [DetailCategories]
