--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Saved/Config/CrashReportClient/UECC-Windows-A5F9AFA146C51C8E0B800783729C9E20/CrashReportClient.ini
+Saved/Autosaves/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter_Auto1.uasset
